--- a/radio/index.jade
+++ b/radio/index.jade
@@ -4,3 +4,19 @@ block shows
 	h1 Shows
 block player
 	h1 Test
+
+	//
+		<zf-accordion>
+		<zf-accordion-item title="Input your title here">
+		Content goes here
+		</zf-accordion-item>
+		</zf-accordion>
+	ul#days.days
+		li.day(ng-repeat='day in showDays track by $index')
+		| {{day.text}}
+		ul.shows
+			li.show(ng-repeat='show in day.shows track by $index')
+			| {{show.name}}
+			ul.songs
+				li.song(ng-repeat='song in show.songs track by $index')
+				span(ng-click='setCurrentSong(song)') {{song.text}}
