--- a/radio/index.jade
+++ b/radio/index.jade
@@ -21,17 +21,11 @@ html
 				//- The Intro block appears above flash messages (used for temporary information display)
 				.row: .columns.medium-4.shows
 					h1 Shows
-					//
-						<zf-accordion>
-						<zf-accordion-item title="Input your title here">
-						Content goes here
-						</zf-accordion-item>
-						</zf-accordion>
-					ul#days.days
-						li.day(ng-repeat='day in showDays track by $index')
+					zf-accordion#days.days
+						zf-accordion-item.day(ng-repeat='day in showDays track by $index')
 							span {{day.text}}
-							ul.shows
-								li.show(ng-repeat='show in day.shows track by $index')
+							zf-accordion.shows
+								zf-accordion-item.show(ng-repeat='show in day.shows track by $index')
 									span {{show.name}}
 									ul.songs
 										li.song(ng-repeat='song in show.songs track by $index')
