remove useless margin left

--- a/radio/styles/style.css
+++ b/radio/styles/style.css
@@ -5466,4 +5466,8 @@ blockquote p {
   float: none; }
 
 .unstyled {
-  list-style-type: none; }
+  list-style-type: none;
+  list-style-position: outside; }
+
+.songs {
+  margin-left: 0; }
