--- a/templates/layouts/footer.jade
+++ b/templates/layouts/footer.jade
@@ -3,17 +3,18 @@
 	.columns.medium-8.medium-offset-2
 	
 		ul.inline-list
-			li
-				a.twitter(href='#') Home
-			li
-				a.facebook(href='#') Infos
-			li
-				a.mail(href='#') Contact
-			li
-				a.mail(href='http://dolf.trieschnigg.nl/excel/index.php', target="_blank") MS Excel Functions translations
+			//- li
+			//- 	a.twitter(href='#') Home
+			//- li
+			//- 	a.facebook(href='#') Infos
+			//- li
+			//- 	a.mail(href='#') Contact
+			//- li
+			//- 	a.mail(href='http://dolf.trieschnigg.nl/excel/index.php', target="_blank") MS Excel Functions translations
 
 	.columns
-		p.text-center 
-			a(href='#') Infos & Legal
-		//- .copyright &copy; 
-		//- 2015 Bluecraft.io - All rights reserved - 
+		p.text-center.dark
+			a(href='http://bluecraft.io')
+				| made with 
+				img.iconic-color-primary(zf-iconic='', icon='heart', size='small', class='iconic-color-dark')
+				| by bluecraft.io
