--- a/templates/layouts/header.jade
+++ b/templates/layouts/header.jade
@@ -1,8 +1,8 @@
 //- HEADER
 .dark.title-bar
 	span.left
+	span.title.center
 		a(href='bassdrivearchive.com', target='_blank') BassDrive Radio
-	span.title.center {{currentSong.text}}
 	span.right
 		a(href='#')
 			|	{{playerTimer | date : format : h:mm:ss}}
