--- a/radio/index.jade
+++ b/radio/index.jade
@@ -17,21 +17,25 @@ html
 			.menu-group.dark
 				.menu-group-left
 					ul.menu-bar
-						li
-							a(ng-click='play(currentSong.url)')
-								img.iconic-color-primary(zf-iconic='', icon='musical-note', size='medium', class='iconic-color-secondary')
-								| Radio
 				.menu-group-right
 					ul.menu-bar
+						li
+							a(ng-click='play(currentSong.url)', title='Play Radio')
+								img.iconic-color-primary(zf-iconic='', icon='musical-note', size='medium', class='iconic-color-secondary')
 						li
 							a(ng-click='play(currentSong.url)')
 								img.iconic-color-primary(zf-iconic='', icon='media', size='medium', class='iconic-color-secondary', data-state='play')
 						li
 							a(ng-click='pause()')
 								img.iconic-color-primary(zf-iconic='', icon='media', size='medium', class='iconic-color-secondary', data-state='pause')
-
+										
 			.grid-block
-				.grid-block.medium-4
+
+				//- The content block should contain the body of your template's content
+				.grid-block.medium-8.small-12
+					h2 {{currentSong.text}}
+				
+				.grid-block.medium-4.small-12
 					zf-accordion#days.days.grid-block.vertical(auto-open="false")
 						zf-accordion-item.day(title='{{day.text}}', ng-repeat='day in showDays track by $index')
 							zf-accordion.shows(auto-open="false")
@@ -39,10 +43,6 @@ html
 									ul.songs.unstyled
 										li.song(ng-repeat='song in show.songs track by $index')
 											span.button.expand.dark(ng-click='setCurrentSong(song)') {{song.text}}
-
-				//- The content block should contain the body of your template's content
-				.grid-block.medium-8
-					h2 {{song.text}}
 
 
 			//- FOOTER
