changes title of the header

--- a/templates/layouts/header.jade
+++ b/templates/layouts/header.jade
@@ -2,7 +2,7 @@
 .dark.title-bar
 	span.left
 	span.title.center
-		a(href='bassdrivearchive.com', target='_blank') BassDrive Radio
+		a(href='http://bassdrivearchive.com', target='_blank') BassDrive Radio
 	span.right
 		a(href='#')
 			|	{{playerTimer | date : format : h:mm:ss}}
