--- a/templates/layouts/header.jade
+++ b/templates/layouts/header.jade
@@ -1,6 +1,8 @@
 //- HEADER
 .dark.title-bar
 	span.left
+		a(href='http://bassdrivearchive.com', target='_blank')
+			img(src="img/bassdrive-logo.svg", alt="BassDrive Radio logo")
 	span.title.center
 		a(href='http://bassdrivearchive.com', target='_blank') BassDrive Radio
 	span.right
