--- a/radio/styles/style.scss
+++ b/radio/styles/style.scss
@@ -5,4 +5,6 @@
 @import 'custom/type';
 @import 'custom/helpers';
 @import 'custom/menu-bar';
+@import 'custom/archives';
+@import 'custom/player';
 // @import 'custom/footer';
