--- a/radio/index.jade
+++ b/radio/index.jade
@@ -55,9 +55,9 @@ html
 						zf-accordion-item.day(title='{{day.text}}', ng-repeat='day in showDays track by $index')
 							zf-accordion.shows(auto-open="false")
 								zf-accordion-item.show(title='{{show.name}}', ng-repeat='show in day.shows track by $index')
-									ul.songs.unstyled
-										li.song(ng-repeat='song in show.songs track by $index')
-											span.button.expand.primary(ng-click='setCurrentSong(song)') {{song.text}}
+									ul.block-list.songs
+										li.song.with-chevron(ng-repeat='song in show.songs track by $index')
+											span(ng-click='setCurrentSong(song)') {{song.text}}
 
 				//- The content block should contain the body of your template's content
 				.grid-block.medium-8.small-12.vertical.player-wrapper
@@ -66,12 +66,15 @@ html
 						//- span.center.title {{currentSong.text}}
 					div.card						
 						img(src="img/bassdrive-logo.svg", alt="")						
-						.divider {{currentSong.text}}
+						.divider
+							h1.text-center {{currentSong.text}}
 						.card-section
 							h2 {{currentSong.show}}
 							h2 {{currentSong.date}}
 							h2 {{currentSong.name}}
-							a.label {{currentSong.url}}
+							a.small.button.expand.track-url(href='{{currentSong.url}}', target='_blank')
+								span {{currentSong.url}}
+								img.iconic-color-primary(zf-iconic='', icon='external-link', size='small', class='iconic-color-secondary')
 
 			//- FOOTER
 			include ../templates/layouts/footer
