--- a/radio/styles/custom/_archives.scss
+++ b/radio/styles/custom/_archives.scss
@@ -36,11 +36,12 @@
 	>.accordion-content{
 		padding: 0; 
 	}
-	.button{
-		margin-bottom: 0.15rem; 
-	}
+	
+	// .button{
+	// 	margin-bottom: 0.15rem; 
+	// }
 }
 
 .songs{
-	margin-left: 0; 
+	margin: 0; 
 }
