--- a/radio/templates/layouts/header.jade
+++ b/radio/templates/layouts/header.jade
@@ -7,4 +7,4 @@
 		a(href='http://bassdrivearchive.com', target='_blank') BassDrive Radio
 	span.right
 		a(href='#')
-			|	{{playerTimer | date : format : h:mm:ss}}
+			img.icon-only(zf-iconic='', icon='cog', size='small', class='iconic-color-secondary')
