--- a/radio/styles/style.css
+++ b/radio/styles/style.css
@@ -5513,7 +5513,7 @@ blockquote p {
 .player-wrapper .title-bar {
   padding: 0.6rem; }
 
-.player-wrapper .menu-bar > li > a > .iconic.icon-only {
+.player-wrapper .menu-bar > li > a.icon-only > .iconic {
   margin: 0; }
 
 .player-title {
