--- a/radio/styles/style.css
+++ b/radio/styles/style.css
@@ -1850,13 +1850,13 @@ progress, meter {
   -moz-appearance: none;
   display: block;
   width: 100%;
-  height: 1.5rem;
+  height: 0.1rem;
   margin-bottom: 1rem;
-  background: #ccc;
+  background: #A3D6EE;
   border: 0; }
 
 progress::-webkit-progress-bar {
-  background: #ccc; }
+  background: #A3D6EE; }
 
 progress::-webkit-progress-value {
   background: #1CA9D7; }
@@ -1865,41 +1865,41 @@ progress::-moz-progress-bar {
   background: #1CA9D7; }
 
 progress.high::-webkit-progress-value {
-  background: #43AC6A; }
+  background: #1CA9D7; }
 
 progress.high::-moz-progress-bar {
-  background: #43AC6A; }
+  background: #1CA9D7; }
 
 progress.medium::-webkit-progress-value {
-  background: #e7cf00; }
+  background: #1CA9D7; }
 
 progress.medium::-moz-progress-bar {
-  background: #e7cf00; }
+  background: #1CA9D7; }
 
 progress.low::-webkit-progress-value {
-  background: #F04124; }
+  background: #1CA9D7; }
 
 progress.low::-moz-progress-bar {
-  background: #F04124; }
+  background: #1CA9D7; }
 
 meter {
-  background: #ccc; }
+  background: #A3D6EE; }
   meter::-webkit-meter-bar {
-    background: #ccc; }
+    background: #A3D6EE; }
   meter::-webkit-meter-optimum-value {
-    background: #43AC6A; }
+    background: #1CA9D7; }
   meter::-webkit-meter-suboptimum-value {
-    background: #e7cf00; }
+    background: #1CA9D7; }
   meter::-webkit-meter-even-less-good-value {
-    background: #F04124; }
+    background: #1CA9D7; }
   meter::-moz-meter-bar {
     background: #1CA9D7; }
   meter:-moz-meter-optimum::-moz-meter-bar {
-    background: #43AC6A; }
+    background: #1CA9D7; }
   meter:-moz-meter-sub-optimum::-moz-meter-bar {
-    background: #e7cf00; }
+    background: #1CA9D7; }
   meter:-moz-meter-sub-sub-optimum::-moz-meter-bar {
-    background: #F04124; }
+    background: #1CA9D7; }
 
 /*
   PANEL
@@ -4733,14 +4733,14 @@ meter {
 
   A floating container that can anchor to any other on-screen element, and contain any content, including grid blocks or panels.
 */
-.popup {
+.popup, #popup-volume {
   position: absolute;
   z-index: 1000;
   opacity: 0;
   overflow: hidden;
   transition: opacity 0.25s ease-out;
   pointer-events: none; }
-  .tether-enabled.popup {
+  .tether-enabled.popup, .tether-enabled#popup-volume {
     opacity: 1;
     pointer-events: auto; }
 
@@ -5527,3 +5527,12 @@ blockquote p {
 
 .timer {
   color: #FFF; }
+
+#popup-volume {
+  width: 18.75rem;
+  background: #fff;
+  border-radius: 0;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
+  border: 0;
+  left: auto;
+  right: 0; }
