fixes volume issue in setCurrentSong()

--- a/radio/templates/layouts/head.jade
+++ b/radio/templates/layouts/head.jade
@@ -6,7 +6,7 @@ title= 'Bassdrive Radio - archive player (unofficial)'
 link(rel="shortcut icon", href="/favicon.ico", type="image/x-icon")
 
 //- Customise the stylesheet for your site by editing /public/styles/site.sass
-link(href="/radio/styles/style.css", rel="stylesheet")
+link(href="/styles/style.css", rel="stylesheet")
 
 
 //- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries
