--- a/radio/templates/layouts/footer-scripts.jade
+++ b/radio/templates/layouts/footer-scripts.jade
@@ -1,4 +1,4 @@
-script(src='/radio/js/scripts.js')
+script(src='/js/scripts.js')
 	
 //- Add scripts that are globally required by your site here.
 
