--- a/radio/templates/index.jade
+++ b/radio/templates/index.jade
@@ -14,23 +14,7 @@ html
 			include ../templates/layouts/header
 
 		
-			.grid-block
-				
-				.grid-block.medium-4.small-12.vertical
-					.title-bar.primary
-						span.left.title  Archives
-
-					div.center.panel(ng-show="loading")
-						img(zf-iconic='', icon='cogs', size='large', class='iconic-color-primary')
-						h3 We're fetching the bassdrive archives
-
-					zf-accordion#days.days.grid-block.vertical(auto-open="false", ng-hide="loading")
-						zf-accordion-item.day(title='{{day.text}}', ng-repeat='day in showDays track by $index')
-							zf-accordion.shows(auto-open="false")
-								zf-accordion-item.show(title='{{show.name}}', ng-repeat='show in day.shows track by $index')
-									ul.block-list.songs
-										li.song.with-chevron(ng-repeat='song in show.songs track by $index', ng-class='{active : currentSong.url===song.url}')
-											span(ng-click='setCurrentSong(song)') {{song.text}}
+			.grid-block.vertical.medium-horizontal
 
 				//- The content block should contain the body of your template's content
 				.grid-block.medium-8.small-12.vertical.player-wrapper
@@ -72,6 +56,24 @@ html
 							a.small.button.expand.track-url(href='{{currentSong.url}}', target='_blank')
 								span {{currentSong.url}}
 								img.iconic-color-primary(zf-iconic='', icon='external-link', size='small', class='iconic-color-secondary')
+
+				.grid-block.medium-4.small-12.vertical.archives-wrapper
+					.title-bar.primary
+						span.left.title  Archives
+
+					div.center.loading-wrapper(ng-show="loading")
+						img(zf-iconic='', icon='cogs', size='large', class='iconic-color-primary')
+						h3 We're fetching the bassdrive archives
+
+					zf-accordion#days.days.grid-block.vertical(auto-open="false", ng-show="!loading")
+						zf-accordion-item.day(title='{{day.text}}', ng-repeat='day in showDays track by $index')
+							zf-accordion.shows(auto-open="false")
+								zf-accordion-item.show(title='{{show.name}}', ng-repeat='show in day.shows track by $index')
+									ul.block-list.songs
+										li.song.with-chevron(ng-repeat='song in show.songs track by $index', ng-class='{active : currentSong.url===song.url}')
+											span(ng-click='setCurrentSong(song)') {{song.text}}
+
+
 
 			//- FOOTER
 			include ../templates/layouts/footer
